gatekeeper/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-latest-image
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  containers:
    - name: nginx
      image: nginx:latest
