gatekeeper/constraint-disallow-latest.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowLatest
metadata:
  name: disallow-latest-tag
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
